# hikaru

./: .gitignore  README.md  hikaru.cabal  package.yaml  stack.yaml
demo/: Main.hs
examples/: Simple.hs
lib/: Hikaru.hs
lib/Hikaru/: Action.hs  CSRF.hs  Config.hs  Develop.hs  Dispatch.hs  Form.hs  HTML.hs  Link.hs  Localize.hs  Media.hs  Route.hs  Types.hs  Widget.hs
lib/Web/: Hikaru.hs
lib/Web/Hikaru/: Action.hs  Dispatch.hs  Form.hs  Link.hs  Locale.hs  Localize.hs  Media.hs  Route.hs  Types.hs
test/: Bench.hs  Spec.hs
test/Hikaru/: Demo.hs  DemoSpec.hs  FormSpec.hs  Test.hs
