cabal-version: 3.0

name: hikaru
version: 0.2.0.0
homepage: https://github.com/mordae/hikaru#readme
bug-reports: https://github.com/mordae/hikaru/issues

license: MIT
license-file: LICENSE
copyright: Jan Hamal Dvořák
maintainer: mordae@anilinux.org
author: Jan Hamal Dvořák

synopsis: Haskell web application framework
description:
    Hikaru is a small framework for web applications.
    It provides applicative routing, content negotiation
    and a customizable action monad.
    .
    (It is also a Star Trek reference, which is apparently
    a requirement for this class of software.)

category: Web
build-type: Simple
extra-source-files: README.md

source-repository head
    type: git
    location: https://github.com/mordae/hikaru

common common
    default-language: Haskell2010

    default-extensions:
        AllowAmbiguousTypes
        BangPatterns
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveGeneric
        DuplicateRecordFields
        EmptyDataDecls
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        NamedFieldPuns
        NoImplicitPrelude
        OverloadedStrings
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances

    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Widentities
        -Wredundant-constraints

    build-depends:
      , aeson              >=1.4  && <1.6
      , attoparsec         >=0.13 && <0.15
      , base               >=4.13 && <5
      , binary             >=0.8  && <0.9
      , bytestring         >=0.10 && <0.12
      , case-insensitive   >=1.2  && <1.3
      , containers         >=0.6  && <0.7
      , cookie             >=0.4  && <0.5
      , cryptonite         >=0.26 && <0.29
      , foreign-store      >=0.2  && <0.3
      , http-types         >=0.12 && <0.13
      , hvect              >=0.4  && <0.5
      , lucid              >=2.9  && <2.10
      , memory             >=0.15 && <0.16
      , mtl                >=2.2  && <2.3
      , praha              >=0.1  && <0.2
      , praha-config       >=0.1  && <0.2
      , resourcet          >=1.2  && <1.3
      , text               >=1.2  && <1.3
      , time               >=1.9  && <1.12
      , unliftio           >=0.2  && <0.3
      , wai                >=3.2  && <3.3
      , wai-extra          >=3.0  && <3.2
      , wai-websockets     >=3.0  && <3.1
      , websockets         >=0.12 && <0.13


library
    import: common

    exposed-modules:
        Hikaru
        Hikaru.Develop
        Hikaru.Action
        Hikaru.CSRF
        Hikaru.Dispatch
        Hikaru.Widget
        Hikaru.Form
        Hikaru.Link
        Hikaru.Localize
        Hikaru.Media
        Hikaru.Route
        Hikaru.Types

    hs-source-dirs: lib
    other-modules:
        Paths_hikaru

    ghc-options:
        -Wunused-packages

test-suite spec
    import: common

    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-tool-depends: hspec-discover:hspec-discover -any
    cpp-options: -DTEST
    hs-source-dirs: test
    other-modules:
        Hikaru.Demo
        Hikaru.DemoSpec
        Hikaru.FormSpec
        Hikaru.Test
        Paths_hikaru

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

    build-depends:
        hikaru -any
      , hspec -any
