cabal-version:      3.0
name:               hikaru
version:            0.4.0
license:            MIT
license-file:       LICENSE
copyright:          Jan Hamal Dvořák
maintainer:         mordae@anilinux.org
author:             Jan Hamal Dvořák
homepage:           https://github.com/mordae/hikaru#readme
bug-reports:        https://github.com/mordae/hikaru/issues
synopsis:           Haskell web application framework
description:
    Hikaru is a small framework for web applications.
    It provides applicative routing, content negotiation
    and a customizable action monad.
    .
    (It is also a Star Trek reference, which is apparently
    a requirement for this class of software.)

category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/mordae/hikaru

library
    exposed-modules:
        Hikaru
        Hikaru.Action
        Hikaru.CSRF
        Hikaru.Develop
        Hikaru.Dispatch
        Hikaru.Form
        Hikaru.HTML
        Hikaru.Link
        Hikaru.Localize
        Hikaru.Media
        Hikaru.Route
        Hikaru.Types
        Hikaru.Widget

    hs-source-dirs:     lib
    other-modules:      Paths_hikaru
    default-language:   GHC2021
    default-extensions:
        AllowAmbiguousTypes BlockArguments DataKinds DefaultSignatures
        DuplicateRecordFields GeneralizedNewtypeDeriving LambdaCase
        NoImplicitPrelude OverloadedStrings RecordWildCards TypeFamilies
        UndecidableInstances DisambiguateRecordFields NoFieldSelectors
        OverloadedRecordDot

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns -Wpartial-fields
        -Wincomplete-record-updates -Widentities -Wredundant-constraints
        -Wunused-packages

    build-depends:
        aeson >=1.4,
        attoparsec >=0.13,
        base >=4.13 && <5,
        binary >=0.8,
        bytestring >=0.10,
        case-insensitive >=1.2,
        containers >=0.6,
        cookie >=0.4,
        foreign-store >=0.2,
        HsOpenSSL >=0.11,
        http-types >=0.12,
        hvect >=0.4,
        blaze-builder >=0.4,
        praha >=0.1,
        praha-config >=0.1,
        praha-logger >=0.1,
        resourcet >=1.2,
        text >=1.2,
        time >=1.9,
        unliftio >=0.2,
        wai >=3.2,
        wai-extra >=3.0,
        wai-websockets >=3.0,
        websockets >=0.12

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    cpp-options:        -DTEST
    hs-source-dirs:     test
    other-modules:
        Hikaru.Demo
        Hikaru.DemoSpec
        Hikaru.FormSpec
        Hikaru.Test
        Paths_hikaru

    default-language:   GHC2021
    default-extensions:
        AllowAmbiguousTypes BlockArguments DataKinds DefaultSignatures
        DuplicateRecordFields GeneralizedNewtypeDeriving LambdaCase
        NoImplicitPrelude OverloadedStrings RecordWildCards TypeFamilies
        UndecidableInstances DisambiguateRecordFields NoFieldSelectors
        OverloadedRecordDot

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns -Wpartial-fields
        -Wincomplete-record-updates -Widentities -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        aeson >=1.4,
        attoparsec >=0.13,
        base >=4.13 && <5,
        binary >=0.8,
        bytestring >=0.10,
        case-insensitive >=1.2,
        containers >=0.6,
        cookie >=0.4,
        foreign-store >=0.2,
        hikaru,
        hspec,
        http-types >=0.12,
        hvect >=0.4,
        praha >=0.1,
        praha-config >=0.1,
        resourcet >=1.2,
        text >=1.2,
        time >=1.9,
        unliftio >=0.2,
        wai >=3.2,
        wai-extra >=3.0,
        wai-websockets >=3.0,
        websockets >=0.12
